<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:paddingStart="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/sync" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/tv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_time" />


        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/str_condition"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FAFAFA"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main" />

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            android:elevation="15dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/snowflake" />


        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_degree"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/str_per_cent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FAFAFA"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_temp" />

        <!--    <ImageView-->
        <!--        android:id="@+id/image2"-->
        <!--        android:layout_width="50dp"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:layout_centerHorizontal="true"-->
        <!--        android:layout_centerVertical="true"-->
        <!--        android:layout_marginEnd="20dp"-->
        <!--        android:contentDescription="@string/str_humidity"-->
        <!--        android:elevation="15dp"-->
        <!--        app:layout_constraintBottom_toBottomOf="@id/humidity"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="@id/temp"-->
        <!--        app:srcCompat="@drawable/humidity" />-->


        <TextView
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_minimum"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_humidity" />

        <TextView
            android:id="@+id/tv_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:text="@string/str_maximum"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FAFAFA"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tv_min"
            app:layout_constraintTop_toBottomOf="@id/tv_humidity" />

        <!--    <ImageView-->
        <!--        android:id="@+id/image3"-->
        <!--        android:layout_width="50dp"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:elevation="15dp"-->
        <!--        app:srcCompat="@drawable/temperature" />-->


        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wind"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_max" />


        <!--    <ImageView-->
        <!--        android:id="@+id/image4"-->
        <!--        android:layout_width="50dp"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:layout_alignParentEnd="true"-->
        <!--        android:layout_centerInParent="true"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:layout_marginEnd="20dp"-->
        <!--        android:elevation="15dp"-->
        <!--        app:srcCompat="@drawable/wind" />-->


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_speed" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:ellipsize="end"
            android:text="@string/str_country"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FAFAFA"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <!--    <ImageView-->
        <!--        android:id="@+id/image5"-->
        <!--        android:layout_width="50dp"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:layout_alignParentEnd="true"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:layout_marginEnd="20dp"-->
        <!--        android:elevation="15dp"-->
        <!--        app:srcCompat="@drawable/location" />-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/str_sunrise"
                    app:srcCompat="@drawable/sunrise" />

                <TextView
                    android:id="@+id/tv_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/str_sunrise"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FAFAFA"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@+id/image6"
                    android:contentDescription="@string/str_sunset"
                    app:srcCompat="@drawable/sunset" />

                <TextView
                    android:id="@+id/tv_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/str_sunset"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FAFAFA"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

